// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`multiline.js - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const a = {
  name1: 'value1',
  name2: 'value2',
};

const b = { name1: 'value1',
  name2: 'value2',
};

const c = {
  name1: 'value1', name2: 'value2',
};

const d = {
  name1: 'value1', name2: 'value2', };

const e = { name1: 'value1', name2: 'value2', };

=====================================output=====================================
const a = { name1: "value1", name2: "value2" };

const b = { name1: "value1", name2: "value2" };

const c = { name1: "value1", name2: "value2" };

const d = { name1: "value1", name2: "value2" };

const e = { name1: "value1", name2: "value2" };

================================================================================
`;

exports[`multiline.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const a = {
  name1: 'value1',
  name2: 'value2',
};

const b = { name1: 'value1',
  name2: 'value2',
};

const c = {
  name1: 'value1', name2: 'value2',
};

const d = {
  name1: 'value1', name2: 'value2', };

const e = { name1: 'value1', name2: 'value2', };

=====================================output=====================================
const a = {
  name1: "value1",
  name2: "value2",
};

const b = { name1: "value1", name2: "value2" };

const c = {
  name1: "value1",
  name2: "value2",
};

const d = {
  name1: "value1",
  name2: "value2",
};

const e = { name1: "value1", name2: "value2" };

================================================================================
`;
